# PopSVG

./: .gitignore  LICENSE.md  README.md  pyproject.toml
popsvg/: __init__.py  _version.py  estimation.py  prepare.py  regression_cpu.py  regression_gpu.py
tutorials/: cpu.ipynb  gpu.ipynb
