[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "popsvg"
dynamic = ["version"]
authors = [{name = "Tao Deng", email = "taodeng@link.cuhk.edu.cn"}]
maintainers = [{name = "Tao Deng", email = "taodeng@link.cuhk.edu.cn"}]
description = "A statistical model that captures the spatial variability dynamics of genes across population."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10,<3.13"
dependencies= [
    "anndata>=0.10.9",
    "numpy>=2.2.4",
    "formulaic>=1.1.1",
    "joblib>=1.4.2",
    "tqdm>=4.67.1",
    "scipy>=1.15.2",
    "scikit-learn>=1.5.2",
    "squidpy>=1.6.5",
    "scanpy>=1.11.1",
]

[project.urls]
"Issue Tracker" = "https://github.com/ToryDeng/PopSVG/issues"
"Source Code" = "https://github.com/ToryDeng/PopSVG"

[project.optional-dependencies]
gpu = ["jax[cuda12]>=0.6.0"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
exclude = ["docs"]

[tool.setuptools_scm]
write_to = "popsvg/_version.py"
write_to_template = "__version__ = '{version}'\n"